--- a/_extensions/emctemplatereveal/_extension.yml
+++ b/_extensions/emctemplatereveal/_extension.yml
@@ -1,5 +1,5 @@
-title: Emctemplaterevel
-version: 1.0.1
+title: Emctemplatereveal
+version: 1.0.2
 quarto-required: ">=1.5.0"
 contributes:
   formats:
@@ -7,8 +7,10 @@ contributes:
       template-partials:
         - title-slide.html
       title-slide-attributes:
-        data-background-image: "www/eebuildingdbluescreensize.jpg"  
-      margin: 0.01
+        data-background-image: "templateassets/eebuildingdbluescreensize.jpg"  
+      margin: 0.02
+      width: 1055
+      height: 700
       filters:
         - copy-resources.lua
         - color-text.lua 
@@ -18,9 +20,7 @@ contributes:
         side: left
         slide-number: true
       format-resources:
-        - triangle1.svg
-        - triangleb.svg
-        - eebuildingdbluelogo.jpg
+        - templateassets
   revealjs-plugins:
     - name: RevealEmctemplatereveal
       script:
